<resources>
    <string name="app_name">Parqueadero</string>
    <string name="nombre">Nombre:</string>
    <string name="placa">Placa:</string>
    <string name="identificacion">Identificacion:</string>
    <string name="telefono">Telefono:</string>
    <string name="hora_ingreso">Hora De Ingreso:</string>
    <string name="hora_salida">Hora De Salida:</string>
    <string name="guardar">Guardar</string>
    <string name="observacion">Observaciones</string>
    <string name="ingresar">Ingresar</string>
    <string name="ingreso">Ingreso</string>
    <string name="salida">Salida</string>
    <string name="consulta">Consulta</string>
    <string name="title_activity_menu">Menu</string>
    <string name="buscar">Buscar</string>
    <string name="registrarSalida">Registrar Salida</string>
    <string name="fechaIngreso">Fecha Ingreso:</string>
    <string name="fechaSalida">Fecha Salida:</string>
    <string name="total">Total:</string>
    <string name="fecha_inicial">Fecha Inicial</string>
    <string name="fecha_final">Fecha Final</string>
    <string name="limpiar">Limpiar</string>
    <string name="motos_sin_salida">Motos sin salida:</string>
    <string name="carros_sin_salida">Carros sin salida:</string>
    <string name="moto">Moto</string>
    <string name="carro">Carro</string>
    <string name="tipo_de_veh_culo">Tipo de vehículo:</string>

</resources>
